<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/steps" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/quote"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableRight="@drawable/achievement"
            android:drawablePadding="8dp"
            android:hint="@string/hint_title"
            android:maxLength="20"
            android:textColorHint="@color/hintclr" />

        <EditText
            android:id="@+id/details_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableRight="@drawable/details"
            android:drawablePadding="8dp"
            android:hint="@string/hint_details"
            android:maxLength="200"
            android:textColorHint="@color/hintclr" />

        <EditText
            android:id="@+id/date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableRight="@drawable/date"
            android:drawablePadding="8dp"
            android:hint="@string/hint_date"
            android:textColorHint="@color/hintclr" />

        <TextView
            android:id="@+id/type_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/type"
            android:drawablePadding="8dp"
            android:hint="@string/hint_type"
            android:textColorHint="@color/hintclr" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/sec1_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_sec1"
                android:textColor="@color/sec1" />

            <RadioButton
                android:id="@+id/sec2_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_sec2"
                android:textColor="@color/sec2" />

            <RadioButton
                android:id="@+id/sec3_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_sec3"
                android:textColor="@color/sec3" />

            <RadioButton
                android:id="@+id/sec4_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_sec4"
                android:textColor="@color/sec4" />
        </RadioGroup>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:drawableRight="@drawable/achievement"
            android:padding="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>